updating interfaces file

--- a/cobbler_templates/interfaces.j2
+++ b/cobbler_templates/interfaces.j2
@@ -15,8 +15,8 @@ auto br-host
 iface br-host inet static
     address {{ host_ip }}
     netmask 255.255.255.0
-    gateway 10.33.33.1
-    dns-nameservers 10.33.33.1
+    gateway {{ cobbler_gateway }}
+    dns-nameservers {{ cobbler_nameservers }}
     dns-search net.zbi.cba
     bridge_ports {{ host_iface }}
     bridge_stp off
@@ -30,7 +30,7 @@ auto br-ipmi
 iface br-ipmi inet static
     address {{ ipmi_ip }}
     netmask 255.255.255.0
-    gateway 10.44.44.1
+    gateway {{ ipmi_gateway }}
     bridge_ports {{ ipmi_iface }}
     bridge_stp off
     bridge_waitport 0
